add nav for monbile js show/unshow

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -29,7 +29,8 @@
 			display: block;
 			position: static;
 			background: none;
-			width: auto;
+			// width: auto;
+			transform: translateY(0px);
 		}
 	}
 
