corrected nav show

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -31,6 +31,10 @@
 			background: none;
 			// width: auto;
 			transform: translateY(0px);
+			z-index: 0;
+			flex-direction: row;
+			text-align: end;
+			
 		}
 	}
 
