--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -34,7 +34,12 @@
 			z-index: 0;
 			flex-direction: row;
 			text-align: end;
+
+
+			.nav-link {
+				transition: border 0.5s,  background-color 1s;
 			
+			}
 		}
 	}
 
